<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_subtitles_black_24dp"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_pic"
            android:icon="@drawable/ic_photo_black_24dp"
            android:title="@string/nav_pic" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/nav_video" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_filter_drama_black_24dp"
            android:title="@string/nav_weather" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about" />

    </group>



</menu>
